--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Edward – AI Forretningsplan</title>
-  <script defer src="app.js"></script>
-  <link rel="stylesheet" href="styles.css"/>
+  <title>Edward – Din AI Forretningsplan</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="bundle.js"></script>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <h2>Indlæser Edward...</h2>
+  </div>
 </body>
 </html>
