--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Edward v2 – AI Forretningsplan</title>
+  <title>Edward v3 – AI Forretningsplan Generator</title>
   <link rel="stylesheet" href="styles.css" />
   <script defer src="bundle.js"></script>
 </head>
 <body>
   <div id="root">
-    <h2>Indlæser Edward v2...</h2>
+    <h2>Indlæser Edward AI Generator v3...</h2>
   </div>
 </body>
 </html>
