--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="da">
 <head>
   <meta charset="UTF-8">
-  <title>Edward v5 – AI Forretningsplan</title>
+  <title>Edward v5.2 – Sikker AI Forretningsplan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   <script defer src="bundle.js"></script>
 </head>
 <body>
-  <div id="root">
-    <h2>Indlæser Edward v5 ...</h2>
-  </div>
+  <div id="root"><h2>Indlæser Edward...</h2></div>
 </body>
 </html>
